--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block layout-content
 
 
         // Home
-        section(id="home" class="s-home page-hero target-section waypoint" data-parallax="scroll" data-image-src="/images/HugoPhotos/BG_HUGO_EDITED.JPG" data-natural-width="3000" data-natural-height="2000" data-position-y="center")
+        section(id="home" class="s-home page-hero target-section waypoint" data-parallax="scroll" data-image-src="/images/HugoPhotos/BG_HUGO_EDITED.jpg" data-natural-width="3000" data-natural-height="2000" data-position-y="center")
 
             div(class="overlay")
             
